devel
-----

* make AQL `DISTINCT` not change the order of the results it is applied on

* show C++ function name of call site in ArangoDB log output

  This requires option `--log.line-number` to be set to *true*

* fixed issue #3408: Hard crash in query for pagination

* UI: fixed unresponsive events in cluster shards view

* UI: added word wrapping to query editor

* fixed issue #3395: AQL: cannot instantiate CollectBlock with undetermined 
  aggregation method

* minimum number of V8 contexts in console mode must be 2, not 1. this is
  required to ensure the console gets one dedicated V8 context and all other
  operations have at least one extra context. This requirement was not enforced
  anymore.

* UI: fixed wrong user attribute name validation, issue #3228

* make AQL return a proper error message in case of a unique key constraint
  violation. previously it only returned the generic "unique constraint violated"
  error message but omitted the details about which index caused the problem.

  This addresses https://stackoverflow.com/questions/46427126/arangodb-3-2-unique-constraint-violation-id-or-key

* fix potential overflow in CRC marker check when a corrupted CRC marker 
  is found at the very beginning of an MMFiles datafile

* added option `--server.local-authentication`

* UI: added user roles

* added config option `--log.color` to toggle colorful logging to terminal

* added config option `--log.thread-name` to additionally log thread names

* usernames must not start with `:role:`, added new options:
    --server.authentication-timeout
    --ldap.roles-attribute-name
    --ldap.roles-transformation
    --ldap.roles-search
    --ldap.superuser-role
    --ldap.roles-include
    --ldap.roles-exclude

* performance improvements for full collection scans and a few other operations
  in MMFiles engine

* added `--rocksdb.encryption-key-generator` for enterprise

* Add statistics about the V8 context counts and number of available/active/busy