@@ -137,6 +137,9 @@ struct Functions {
    static AqlValue Upper(arangodb::aql::Query*,
                               transaction::Methods*,
                               VPackFunctionParameters const&);
+   static AqlValue Substring(arangodb::aql::Query*,
+                              transaction::Methods*,
+                              VPackFunctionParameters const&);
    static AqlValue Like(arangodb::aql::Query*, transaction::Methods*,
                         VPackFunctionParameters const&);
    static AqlValue RegexTest(arangodb::aql::Query*, transaction::Methods*,
